--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -1,92 +1,103 @@
 ---
 ---
 
+$thumb-size: 120px;
+$wrap: 800px;
+
+.citation-container {
+  container-type: inline-size;
+}
+
 .citation {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  margin: 20px 0;
+  border-radius: var(--rounded);
+  background: var(--background);
+  overflow: hidden;
+  box-shadow: var(--shadow);
+}
+
+.citation-image {
+  position: relative;
+  width: $thumb-size;
+  flex-shrink: 0;
+  // box-shadow: var(--shadow);
+}
+
+.citation-image img {
+  position: absolute;
+  inset: 0;
   width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.citation-text {
+  position: relative;
+  display: inline-flex;
+  flex-wrap: wrap;
+  gap: 10px;
   max-width: 100%;
-  margin: 30px 0;
-  @include trim-v-margins;
+  height: min-content;
   padding: 20px;
-  border: solid 2px $gray-300;
+  padding-left: 30px;
   text-align: left;
+  overflow-wrap: break-word;
+  z-index: 0;
+}
 
-  &[data-style="rich"] {
-    padding: 0;
-    border: none;
-  }
+.citation-title,
+.citation-authors,
+.citation-details,
+.citation-description {
+  width: 100%;
+}
 
-  .citation_image {
-    width: 120px;
-    height: 120px;
-    max-width: 100%;
-    margin-right: 40px;
-    flex-shrink: 0;
-    overflow: hidden;
-    box-shadow: $shadow;
+.citation-title {
+  font-weight: var(--semi-bold);
+}
 
-    img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
-  }
+.citation-text > .icon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: var(--light-gray);
+  opacity: 0.5;
+  font-size: 30px;
+  z-index: -1;
+}
 
-  .citation_text {
-    width: 0;
-    flex-grow: 1;
+.citation-publisher {
+  text-transform: capitalize;
+}
 
-    .citation_title {
-      font-weight: $semi-bold;
-    }
+.citation-description {
+  color: var(--gray);
+}
 
-    .citation_title:not(:last-child),
-    .citation_authors:not(:last-child),
-    .citation_details:not(:last-child) {
-      margin-bottom: 15px;
-    }
+.citation-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 
-    .tags:not(:last-child) {
-      margin-bottom: 5px;
-    }
+.citation-buttons .extra-links {
+  margin: 0;
+}
 
-    .citation_links {
-      .link {
-        vertical-align: bottom;
-      }
-    }
-  }
-.citation_badge {
-    width: 120px;
-    height: 120px;
-    max-width: 100%;
-    margin-left: 40px;
-    flex-shrink: 0;
-    overflow: visible;
-    vertical-align: center;
+.citation-text > .tags {
+  display: inline-flex;
+  justify-content: flex-start;
+  margin: 0;
+}
 
-  }
-  @media (max-width: $phone) {
-    align-items: center;
+@container (max-width: #{$wrap}) {
+  .citation {
     flex-direction: column;
+  }
 
-    .citation_image {
-      width: 200px;
-      height: 200px;
-      margin: 0;
-      margin-bottom: 20px;
-    }
-
-    .citation_text {
-      width: 100%;
-      margin-bottom: 20px;
-    }
-    .citation_badge {
-      width: 200px;
-      height: 200px;
-      margin: 0;
-    }
+  .citation-image {
+    width: unset;
+    height: $thumb-size;
   }
 }
