--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -26,7 +26,7 @@ $wrap: 800px;
 
 .citation-image img {
   position: absolute;
-  inset: 10;
+  inset: 20;
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -42,7 +42,7 @@ $wrap: 800px;
   padding: 20px;
   padding-left: 30px;
   text-align: left;
-  overflow-wrap: break-word;
+  //overflow-wrap: break-word;
   z-index: 0;
 }
 
