--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -51,7 +51,7 @@
           citation.authors
           | join: ","
           | split: ","
-          | array_carve: 200 <!-- changed to 200 from 5 -->
+        <!--  | array_carve: 5   -->
           | join: ", "
           | markdownify
           | remove: "<p>" | remove: "</p>"
