--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -42,17 +42,14 @@
 
       <div
         class="citation-authors"
-        {% if citation.authors.size > 200 %} <!-- changed to 200 from 10 -->
-          data-tooltip="{{ citation.authors | join: ", " }} "
-        {% endif %}
         tabindex="0"
       >
         {{
           citation.authors
           | join: ","
-          | split: ","
-        <!--  | array_carve: 5   -->
-          | join: ", "
+        <!--  | split: ","
+          | array_carve: 5   
+          | join: ", " -->
           | markdownify
           | remove: "<p>" | remove: "</p>"
           | default: "[no author info]"
