--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -49,9 +49,9 @@
           | join: ","
         <!--  | split: ","
           | array_carve: 5   
-          | join: ", " -->
+          | join: ", " 
           | markdownify
-          | remove: "<p>" | remove: "</p>"
+          | remove: "<p>" | remove: "</p>" -->
           | default: "[no author info]"
         }}
       </div>
