--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -27,7 +27,7 @@ $wrap: 800px;
 }
 
 .citation-image img {
-  position: absolute;
+  position: relative;
   inset: 0;
   width: 100%;
   height: 100%;
