--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -32,8 +32,7 @@ $wrap: 800px;
   width: 100%;
   height: 100%;
   object-fit: contain;
-  padding-left: 15px;
-  top: 0;
+  object-position: 0 0;
 }
 
 .citation-text {
