--- a/_includes/content.html
+++ b/_includes/content.html
@@ -10,7 +10,10 @@
 {% assign sections = content | split: "<!-- section break -->" | array_filter %}
 
 {% for section in sections %}
-  {% assign dark = section | regex_scan: "dark: (.*);" | default: "" %}
+  {% assign background = section
+    | regex_scan: "background: (.*);"
+    | default: nil
+  %}
   {% assign size = section | regex_scan: "size: (.*);" | default: "page" %}
 
   <section
