--- a/_includes/content.html
+++ b/_includes/content.html
@@ -10,6 +10,7 @@
 {% assign sections = content | split: "<!-- section break -->" | array_filter %}
 
 {% for section in sections %}
+  {% assign dark = section | regex_scan: "dark: (.*);" | default: "" %}
   {% assign background = section
     | regex_scan: "background: (.*);"
     | default: nil
