--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -29,7 +29,7 @@
   // font families
   --title: "Barlow", sans-serif;
   --heading: "Barlow", sans-serif;
-  --body: "Barlow", sans-serif;
+  --body: "Lora", sans-serif;
   --code: "Roboto Mono", monospace;
 
   // font sizes
