--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -17,7 +17,7 @@
   --primary: #0795d9;
   --secondary: #075985;
   --text: #ffffff;
-  --background: #31363F;
+  --background: #404040;
   --background-alt: #1c1c1c;
   --light-gray: #404040;
   --gray: #808080;
