--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,12 +9,12 @@
   {% endif %}
   data-size="wide"
 >
-  <!--
-    <div>
-      Extra details like contact info or address
-    </div>
-  -->
-
+  
+  <div>
+    Laboratory of Oral Mucosal Immunity
+    University of Minnesota
+  </div>
+  
   <div>
     {% for link in site.links %}
       {% assign key = link[0] %}
@@ -23,7 +23,7 @@
     {% endfor %}
   </div>
 
-  <div>
+  <!-- <div>
     &copy; {{ site.time | date: "%Y" }}
     {{ site.title }}
     &nbsp; | &nbsp; Built with
@@ -31,7 +31,7 @@
       Lab Website Template
     </a>
   </div>
-
+  -->
   <input
     type="checkbox"
     class="dark-toggle"
