--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 >
   
   <div>
-    Laboratory of Oral Mucosal Immunity
+    Laboratory of Oral Mucosal Immunity <br>
     University of Minnesota
   </div>
   
