--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -117,6 +117,7 @@ header:not([data-big]) {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 20px;
 
   @if $sticky {
     top: unset;
@@ -128,7 +129,7 @@ header:not([data-big]) {
   }
 
   .logo {
-    height: $logo-big;
+    height: $logo;
   }
 
   .title-text {
