--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -48,7 +48,7 @@ header a {
 
 .title-text {
   display: flex;
-  justify-content: flex-start;
+  justify-content: left;
   align-items: baseline;
   flex-wrap: wrap;
   gap: 5px;
@@ -112,7 +112,6 @@ nav > a:hover {
 }
 
 header:not([data-big]) {
-  width: 100%;
   @media (max-width: $collapse) {
     justify-content: flex-end;
 
