--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -29,11 +29,10 @@
   // font families
   --title: "Barlow", sans-serif;
   --heading: "Barlow", sans-serif;
-  --body: "Lora", sans-serif;
+  --body: "Barlow", sans-serif;
   --code: "Roboto Mono", monospace;
 
   // font sizes
-  --med: 1.0rem;
   --large: 1.2rem;
   --xl: 1.4rem;
   --xxl: 1.6rem;
