--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -33,6 +33,8 @@
   --code: "Roboto Mono", monospace;
 
   // font sizes
+  --sm: 0.8rem;
+  --med: 1.0rem;
   --large: 1.2rem;
   --xl: 1.4rem;
   --xxl: 1.6rem;
