--- a/_styles/section.scss
+++ b/_styles/section.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$page: 1000px;
+$page: 700px;
 $padding: 40px;
 
 section {
@@ -35,5 +35,5 @@ main > section:nth-of-type(odd) {
 }
 
 main > section:nth-of-type(even) {
-  background: var(--background-alt);
+  background: var(--background);
 }
