revert to original

--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -48,7 +48,7 @@ header a {
 
 .title-text {
   display: flex;
-  justify-content: left;
+  justify-content: flex-start;
   align-items: baseline;
   flex-wrap: wrap;
   gap: 5px;
@@ -112,32 +112,22 @@ nav > a:hover {
 }
 
 header:not([data-big]) {
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  padding: $big-padding 20px;
+  @media (max-width: $collapse) {
+    justify-content: flex-end;
 
-  .home {
-    flex-direction: column;
-    flex-grow: 0;
-  }
+    .nav-toggle {
+      display: flex;
+    }
 
-  .logo {
-    height: $logo;
-  }
+    .nav-toggle:not(:checked) + nav {
+      display: none;
+    }
 
-  .title-text {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .title {
-    font-size: var(--large);
-  }
-
-  .subtitle {
-    font-size: var(--med);
+    nav {
+      align-items: flex-end;
+      flex-direction: column;
+      width: 100%;
+    }
   }
 }
 
