--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$thumb-size: 120px;
+$thumb-size: 180px;
 $wrap: 800px;
 
 .citation-container {
@@ -14,15 +14,13 @@ $wrap: 800px;
   border-radius: var(--rounded);
   background: var(--background);
   overflow: hidden;
-  //box-shadow: var(--shadow);
+  box-shadow: var(--shadow);
 }
 
 .citation-image {
   position: relative;
   width: $thumb-size;
   flex-shrink: 0;
-  justify-content: flex-start; //added to justify image to top left
-  align-items: flex-start; //added to justify image to top left
   // box-shadow: var(--shadow);
 }
 
@@ -32,7 +30,6 @@ $wrap: 800px;
   width: 100%;
   height: 100%;
   object-fit: contain;
-  object-position: 0 0;
 }
 
 .citation-text {
@@ -84,7 +81,7 @@ $wrap: 800px;
   gap: 10px;
 }
 
-.citation-buttons .extra-links {
+.citation-buttons .button {
   margin: 0;
 }
 
