--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -21,6 +21,8 @@ $wrap: 800px;
   position: relative;
   width: $thumb-size;
   flex-shrink: 0;
+  justify-content: flex-start; //added to justify image to top left
+  align-items: flex-start; //added to justify image to top left
   // box-shadow: var(--shadow);
 }
 
@@ -30,6 +32,7 @@ $wrap: 800px;
   width: 100%;
   height: 100%;
   object-fit: contain;
+  object-position: 0 0;
 }
 
 .citation-text {
