--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -14,7 +14,7 @@ $wrap: 800px;
   border-radius: var(--rounded);
   background: var(--background);
   overflow: hidden;
-  box-shadow: var(--shadow);
+  //box-shadow: var(--shadow);
 }
 
 .citation-image {
