--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,12 +26,13 @@
   <div>
     &copy; {{ site.time | date: "%Y" }}
     {{ site.title }}
-    &nbsp; | &nbsp; Built with
+    <!--&nbsp; | &nbsp; Built with
     <a href="https://github.com/greenelab/lab-website-template">
       Lab Website Template
     </a>
+    -->
   </div>
-
+<!--
   <input
     type="checkbox"
     class="dark-toggle"
@@ -39,4 +40,5 @@
     aria-label="toggle dark mode"
     oninput="onDarkToggleChange(event)"
   >
+  -->
 </footer>
