--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -105,4 +105,20 @@
       {% endif %}
     </div>
   </div>
+  <div class = "citation_badge">
+    
+    <span 
+      class="__dimensions_badge_embed__" 
+      data-doi="{{ citation-id | remove_first: 'doi:' }}" 
+      data-style="large_rectangle" 
+      data-legend="hover-right">
+    </span>
+    <br>
+    <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+    <script 
+      type='text/javascript' 
+      src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js' 
+      charset="utf-8">
+    </script> 
+  </div>
 </div>
