--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -105,7 +105,7 @@
       {% endif %}
     </div>
   </div>
-  {%- if rich -%}
+  {%- if include.style == rich -%}
   {%- assign id = citation.id -%}
   <div class = "citation_badge">
     
