--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -102,7 +102,6 @@
         {% if citation.tags.size > 0 or citation.repo %}
           {% include tags.html tags=citation.tags repo=citation.repo %}
         {% endif %}
-      {% endif %}
     </div>
   
   <div class = "citation_badge">
@@ -124,7 +123,7 @@
   </div>
   <br>
   <div class="scite-badge"
-     data-doi="{{ id | remove_first: 'doi:' }}"
+     data-doi="{{ citation.id | remove_first: 'doi:' }}"
      data-layout="horizontal"
      data-show-zero="true"
      data-small="true"
@@ -133,5 +132,7 @@
 </div>
 <script async type="application/javascript" src="https://cdn.scite.ai/badge/scite-badge-latest.min.js">
 </script>
+      {% endif %}
+
 </div>
 </div>
