--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -114,13 +114,16 @@
     </span>
     <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
   </div>
-    <br>
+  <br>
+  <br>
   <div 
     data-badge-type="1"
     data-badge-popover='right'
     data-doi="{{ citation.id | remove_first: 'doi:' }}" 
     class="altmetric-embed">
   </div>
+  <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+  <br>
   <br>
   <div class="scite-badge"
      data-doi="{{ citation.id | remove_first: 'doi:' }}"
