--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -67,7 +67,9 @@
         &nbsp;·&nbsp;
         <span class="citation-id">
           {{- citation.id | default: "[no id info]" -}}
-          <br>
+        </span>
+        <span>
+          
         </span>
         <div class = "citation_badge">
     <span 
