--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -69,7 +69,7 @@
           {{- citation.id | default: "[no id info]" -}}
         </span>
         <span>
-          
+         &nbsp; 
         </span>
         <div class = "citation_badge">
     <span 
