--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -68,9 +68,8 @@
         <span class="citation-id">
           {{- citation.id | default: "[no id info]" -}}
         </span>
-        <span>
-         &nbsp; 
-        </span>
+        <div>
+        </div>
         <div class = "citation_badge">
     <span 
       class="__dimensions_badge_embed__" 
