--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -68,8 +68,9 @@
         <span class="citation-id">
           {{- citation.id | default: "[no id info]" -}}
         </span>
-        <div>
-        </div>
+        <span>
+          Metrics:
+        </span>
         <div class = "citation_badge">
     <span 
       class="__dimensions_badge_embed__" 
