--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -68,27 +68,25 @@
         <span class="citation-id">
           {{- citation.id | default: "[no id info]" -}}
         </span>
-        <br>
-        <span>
-          Metrics:
-        </span>
-        <div class = "citation_badge">
-    <span 
-      class="__dimensions_badge_embed__" 
-      data-doi="{{ citation.id | remove_first: 'doi:' }}" 
-      data-style="large_rectangle" 
-      data-legend="hover-right">
-    </span>
-    <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
-  </div>
-  <div 
-    data-badge-type="1"
-    data-badge-popover='right'
-    data-doi="{{ citation.id | remove_first: 'doi:' }}" 
-    class="altmetric-embed">
-  </div>
-  <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
       </div>
+      <div class = "citation_badge">
+        <span 
+          class="__dimensions_badge_embed__" 
+          data-doi="{{ citation.id | remove_first: 'doi:' }}" 
+          data-style="large_rectangle" 
+          data-legend="hover-right">
+        </span>
+        <script async src="https://badge.dimensions.ai/badge.js" charset="utf-8">     
+        </script>
+      </div>
+      <div 
+        data-badge-type="1"
+        data-badge-popover='right'
+        data-doi="{{ citation.id | remove_first: 'doi:' }}" 
+        class="altmetric-embed">
+      </div>
+      <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'>
+      </script>
 
       {% if include.style == "rich" %}
         {% if citation.description %}
