--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -3,8 +3,8 @@
 
 // colors
 [data-dark="false"] {
-  --primary: #0795d9;
-  --secondary: #7dd3fc;
+  --primary: #e76f51;
+  --secondary: #f4a261;
   --text: #000000;
   --background: #ffffff;
   --background-alt: #fafafa;
@@ -14,8 +14,8 @@
   --overlay: #00000020;
 }
 [data-dark="true"] {
-  --primary: #0795d9;
-  --secondary: #075985;
+  --primary: #e76f51;
+  --secondary: #f4a261;
   --text: #ffffff;
   --background: #3b3b3b;
   --background-alt: #1c1c1c;
