--- a/_styles/feature.scss
+++ b/_styles/feature.scss
@@ -21,9 +21,9 @@ $wrap: 800px;
 }
 
 .feature-image img {
-  width: 120%;
-  height: 120%;
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .feature-text {
