--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -68,8 +68,8 @@
 <meta name="title" content="{{ title }}">
 <meta name="description" content="{{ description }}">
 
-<meta property="og:title" content="{{ title }}">
-<meta property="og:site_title" content="{{ site.title }}">
+<meta property="og:title" content="{{ site.title }}">
+<meta property="og:title" content="{{ site.title }}">
 <meta property="og:description" content="{{ description }}">
 <meta property="og:url" content="{{ url }}">
 <meta property="og:image" content="{{ share }}">
