--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -34,7 +34,7 @@ layout: default
 
 <p class="center">
   <a href="{{ search | relative_url }}">
-    Search for {{ page.name | default: page.title }}'s papers
+    Search for papers by {{ page.name | default: page.title }}
   </a>
 </p>
 
