--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include section.html background=page.image %}
+{% include section.html %}
 
 <h1 class="center">{{ page.title }}</h1>
 
@@ -18,6 +18,8 @@ layout: default
 {% include section.html %}
 
 {{ content }}
+
+{{ page.image }}
 
 {% include section.html %}
 
