--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,8 @@
-<!--
-  put your analytics (e.g. Google Analytics) tracking code here
--->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VETJQ1T7RM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VETJQ1T7RM');
+</script>
