--- a/_styles/card.scss
+++ b/_styles/card.scss
@@ -21,10 +21,12 @@
 }
 
 .card-image img {
-  aspect-ratio: 3 / 2;
-  object-fit: cover;
+  position: absolute;
+  inset: 0;
   width: 100%;
-  // box-shadow: var(--shadow);
+  height: 100%;
+  object-fit: contain;
+  object-position: 0 0;
 }
 
 .card-text {
