--- a/_styles/card.scss
+++ b/_styles/card.scss
@@ -21,12 +21,11 @@
 }
 
 .card-image img {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
+  aspect-ratio: 3 / 2;
   object-fit: contain;
-  object-position: 0 0;
+  width: 100%;
+  display: block;
+  // box-shadow: var(--shadow);
 }
 
 .card-text {
