--- a/_styles/card.scss
+++ b/_styles/card.scss
@@ -20,6 +20,10 @@
   width: 350px;
 }
 
+.card[data-style="xsmall"] {
+  width: 250px;
+}
+
 .card-image img {
   aspect-ratio: 3 / 2;
   object-fit: contain;
