--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -102,8 +102,6 @@
               | remove: "</p>"
             }}
           </div>
-          
-          
         {% endif %}
 
         {% if citation.buttons.size > 0 %}
@@ -125,11 +123,6 @@
         {% if citation.tags.size > 0 or citation.repo %}
           {% include tags.html tags=citation.tags repo=citation.repo %}
         {% endif %}
-          
-
-    </div>
-</div>
-</div>  
-
-      {% endif %}
+      
+      {% endif %} </div> </div> </div>
 
