update pubs in profile

--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -42,7 +42,7 @@ layout: default
   {% endfor %}
 
   {% if is_author %}
-    {% include citation.html entry=pub %}
+    {% include citation.html entry=pub style="rich" %}
   {% endif %}
 
 {% endfor %}
