--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -50,7 +50,7 @@
           citation.authors
           | join: ","
           | split: ","
-          | array_carve: 200  <!--  changed from 5 to 200 to include all authors --> 
+          | array_carve: 200
           | join: ", " 
           | markdownify
           | remove: "<p>" | remove: "</p>"
@@ -120,9 +120,6 @@
           </div>
         {% endif %}
 
-        {% if citation.tags.size > 0 or citation.repo %}
-          {% include tags.html tags=citation.tags repo=citation.repo %}
-        {% endif %}
-      
+        
       {% endif %} </div> </div> </div>
 
