--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<style>
+  div { border: 2px solid red; padding: 5px; margin: 5px; }
+  .citation-container { border-color: blue; }
+</style>
 
 {% capture floatcontent %}
 
