--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -22,6 +22,8 @@ layout: default
 
 {% include float.html content=floatcontent %}
 
+<div class="content-column">
+
 {{ content }}
 
 {% assign aliases = page.aliases
@@ -46,9 +48,8 @@ layout: default
   {% endfor %}
 
   {% if is_author %}
-       <div class="citation-wrapper">
          {% include citation.html entry=pub %}
-       </div>
-    {% endif %}
+  {% endif %}
 
 {% endfor %}
+</div>
