--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -22,8 +22,8 @@ layout: default
 
 {% include float.html content=floatcontent %}
 
-<div class="content-column">
-
+<div style="display: flow-root;">
+  
 {{ content }}
 
 {% assign aliases = page.aliases
