--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -43,7 +43,7 @@ layout: default
   {% endfor %}
 
   {% if is_author %}
-         {% include citation.html entry=pub %}
+         {% include citation.html entry=pub style="rich" %}
   {% endif %}
 
 {% endfor %}
