--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -30,7 +30,7 @@ layout: default
 %}
 
 <hr>
-<h3 style="clear: both; padding-top: 20px;">{{ page.name | default: page.title | split: " " | first }}'s Publications</h3>
+<h3 style="clear: both; text-align: center; padding-top: 20px;">{{ page.name | default: page.title | split: " " | first }}'s Publications</h3>
 
 {% for pub in site.data.citations %}
   
