--- a/_includes/citation.html
+++ b/_includes/citation.html
@@ -20,12 +20,21 @@
         class="citation-image"
         aria-label="{{ citation.title | default: "citation link" }}"
       >
-        <img
-          src="{{ citation.image | relative_url }}"
-          alt="{{ citation.title | default: "citation image" }}"
-          loading="lazy"
-          {% include fallback.html %}
-        >
+        {% if citation.image %}
+      <img
+        src="{{ citation.image | relative_url }}"
+        alt="{{ citation.title | default: "citation image" }}"
+        loading="lazy"
+        {% include fallback.html %}
+      >
+      
+    {% else %}
+      <div class="citation-fallback-avatar">
+        <span class="citation-fallback-text">
+          {{ citation.journal | default: citation.publisher | default: "Publication" }}
+        </span>
+      </div>
+    {% endif %}
       </a>
     {% endif %}
 
