--- a/_styles/citation.scss
+++ b/_styles/citation.scss
@@ -56,7 +56,7 @@ $wrap: 800px;
 }
 
 .citation-fallback-text {
-  font-family: sans-serif;
+  font-family: "Barlow", sans-serif;
   font-weight: 600;        /* Bold but not too heavy */
   font-size: 1.3em;        /* Adjust size as needed */
   line-height: 1.3;
